month2_lesson7/otus.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otus-ingress-month2-lesson7
  namespace: m
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1/$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/otusapp/(.+)/(.*)$ /hello/$1/$2;
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: otus-svc-month2-lesson7
                port:
                  number: 7999
          - path: /otusapp/(.+)/(.*)
            pathType: Prefix
            backend:
              service:
                name: otus-svc-month2-lesson7
                port:
                  number: 7999
